[metadata]
name = cheap_repr
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Better version of repr/reprlib for short, cheap string representations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexmojaki/cheap_repr
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = cheap_repr
include_package_data = True
setup_requires = setuptools; setuptools_scm[toml]
install_requires =
    qualname; python_version=='2.7'

tests_require =
    pytest

    pandas>=0.24.2,<0.25; python_version=='2.7' and platform_python_implementation != 'PyPy'
    numpy>=1.16.3,<1.17; python_version=='2.7' and platform_python_implementation != 'PyPy'

    pandas>=0.24.2,<0.26; python_version=='3.5' and platform_python_implementation != 'PyPy'
    numpy>=1.16.3,<1.19; python_version=='3.5' and platform_python_implementation != 'PyPy'

    pandas>=0.24.2; platform_python_implementation != 'PyPy'
    numpy>=1.16.3; platform_python_implementation != 'PyPy'

    chainmap; python_version=='2.7'

    Django<2; python_version=='2.7'
    Django<3; python_version=='3.5'
    Django

[options.extras_require]
tests =
    pytest

    pandas>=0.24.2,<0.25; python_version=='2.7' and platform_python_implementation != 'PyPy'
    numpy>=1.16.3,<1.17; python_version=='2.7' and platform_python_implementation != 'PyPy'

    pandas>=0.24.2,<0.26; python_version=='3.5' and platform_python_implementation != 'PyPy'
    numpy>=1.16.3,<1.19; python_version=='3.5' and platform_python_implementation != 'PyPy'

    pandas>=0.24.2; platform_python_implementation != 'PyPy'
    numpy>=1.16.3; platform_python_implementation != 'PyPy'

    chainmap; python_version=='2.7'

    Django<2; python_version=='2.7'
    Django<3; python_version=='3.5'
    Django

[coverage:run]
relative_files = True

[bdist_wheel]
universal=1
