[metadata]
name = cheap_repr
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Better version of repr/reprlib for short, cheap string representations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexmojaki/cheap_repr
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = cheap_repr
include_package_data = True
setup_requires = setuptools; setuptools_scm[toml]

tests_require =
    pytest

    pandas>=0.24.2; platform_python_implementation != 'PyPy'
    numpy>=1.16.3; platform_python_implementation != 'PyPy'

    Django

[options.extras_require]
tests =
    pytest

    pandas>=0.24.2; platform_python_implementation != 'PyPy'
    numpy>=1.16.3; platform_python_implementation != 'PyPy'

    Django

[coverage:run]
relative_files = True

[bdist_wheel]
universal=1
